# pico-embedded-swift

./: CMakeLists.txt  Devcontainer.Dockerfile  README.md  SwiftLib.h  SwiftLib.swift  SwiftPicoPrint.swift  docker-compose.devcontainer.yml  main.c
.devcontainer/: devcontainer.json
picowi/: dhcp.c  dns.c  join.c  scan.c
picowi/lib/: CMakeLists.txt  module.modulemap  picowi_dhcp.c  picowi_dhcp.h  picowi_dns.c  picowi_event.h  picowi_init.c  picowi_ip.c  picowi_ip.h  picowi_join.c  picowi_join.h  picowi_net.c  picowi_net.h  picowi_pico.h  picowi_scan.c  picowi_udp.c  picowi_wifi.c
picowi/lib/firmware/: fw_43439.c  fw_4343w.c
